<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_content_margin_start"
    android:paddingTop="@dimen/activity_content_margin_top"
    android:paddingEnd="@dimen/activity_content_margin_end"
    tools:context=".ui.reserve.ReserveFragment">


    <TextView
        android:id="@+id/chooseGarageTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/please_choose_garage"
        android:textSize="@dimen/primary_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/chooseGarageSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/content_background"
        android:dropDownVerticalOffset="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseGarageTitleTV" />


    <TextView
        android:id="@+id/chooseCarNumberTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/please_choose_car_number"
        android:textSize="@dimen/primary_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseGarageSpinner" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/chooseCarNumberSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/content_background"
        android:dropDownVerticalOffset="50dp"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseCarNumberTitleTV" />

    <TextView
        android:id="@+id/chooseParkingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/please_choose_car_parking_time"
        android:textSize="@dimen/primary_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseCarNumberSpinner" />

    <Button
        android:id="@+id/parkingTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/common_bg_single_selector"
        android:text="@string/default_parking_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseParkingTime" />


    <TextView
        android:id="@+id/reserveTV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_min_height"
        android:layout_marginTop="50dp"
        android:background="@drawable/primary_bg_single_selector"
        android:gravity="center"
        android:text="@string/reserve"
        android:textColor="@android:color/white"
        android:textSize="@dimen/primary_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parkingTime" />
</androidx.constraintlayout.widget.ConstraintLayout>